Enhance homepage styling and copywriting

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
     <div class="top-banner" role="status" aria-live="polite">
       <div class="container">
         <p>
-          Fresh deals this week – save up to 15% on beverages & breakfast essentials.
-          <a href="#featured-products" class="top-banner__link">See offers</a>
+          Taste the OMOOLA difference – artisan breads, premium beverages & wellness must-haves on limited-time offers.
+          <a href="#featured-products" class="top-banner__link">Explore savings</a>
         </p>
-        <a class="top-banner__cta" href="tel:+2348035551088">Call to Order</a>
+        <a class="top-banner__cta" href="tel:+2348035551088">Call concierge</a>
       </div>
     </div>
     <header class="site-header" role="banner">
@@ -141,11 +141,12 @@
           </picture>
         </div>
         <div class="hero__content container" data-animate="fade-up">
-          <span class="badge">supermarket in Owode Yewa</span>
-          <h1>Premium provisions, delightful service & fast fulfilment.</h1>
+          <span class="badge">Flagship Nigerian supermarket experience</span>
+          <h1>Where premium provisions meet heartfelt hospitality.</h1>
           <p>
-            Discover a modern shopping experience at ISAGA BUS STOP, opposite The Gem International School, Ilaro Road, Owode
-            Yewa. Shop curated groceries, trusted Nigerian brands, and everyday essentials with personalised care.
+            Step into a supermarket crafted for discerning families, chefs, and corporate hosts. From sunrise-ready breakfast
+            selections to gourmet imports, every aisle is curated, climate-controlled, and attended by our dedicated concierge
+            team in Owode Yewa.
           </p>
           <div class="hero__actions">
             <a class="btn btn-primary" href="https://wa.me/2348035551088" target="_blank" rel="noopener">Call to Order</a>
@@ -154,15 +155,15 @@
           <ul class="hero__highlights" aria-label="Store highlights">
             <li>
               <span aria-hidden="true">⚡</span>
-              Same-day fulfilment within Ogun & Lagos
+              Same-day fulfilment across Ogun, Lagos & adjoining states
             </li>
             <li>
               <span aria-hidden="true">🛒</span>
-              250+ curated grocery and household brands
+              250+ curated grocery, wellness & hospitality brands
             </li>
             <li>
               <span aria-hidden="true">📍</span>
-              Easy parking at Owode Yewa flagship store
+              Seamless parking, lounge waiting & trolley assistance in-store
             </li>
           </ul>
         </div>
@@ -170,25 +171,29 @@
 
       <section class="container highlights" aria-labelledby="highlights-title">
         <div class="section-heading">
-          <h2 class="section-title" id="highlights-title">Why customers choose OMOOLA SUPERMARKET STORES</h2>
-          <p>Built on trust, quality, and warm hospitality since 2010.</p>
+          <h2 class="section-title" id="highlights-title">Why discerning shoppers choose OMOOLA SUPERMARKET STORES</h2>
+          <p>Every visit celebrates quality, freshness, and a human touch refined over more than a decade.</p>
         </div>
         <div class="highlight-grid" data-animate="stagger-up">
           <article class="highlight-card">
-            <h3>Curated Variety</h3>
-            <p>From beverages to baby items, our shelves are carefully stocked with top Nigerian and international brands.</p>
+            <div class="highlight-card__icon" aria-hidden="true">🥇</div>
+            <h3>Curated world-class variety</h3>
+            <p>Discover premium Nigerian favourites beside gourmet imports, plant-based innovations, and hotel-grade amenities.</p>
           </article>
           <article class="highlight-card">
-            <h3>Quality Assurance</h3>
-            <p>Each product undergoes freshness checks, ensuring you take home only the best provisions.</p>
+            <div class="highlight-card__icon" aria-hidden="true">🧊</div>
+            <h3>Freshness perfected</h3>
+            <p>Climate-smart storage and hourly freshness checks ensure every item reaches your table in peak condition.</p>
           </article>
           <article class="highlight-card">
-            <h3>Community Focus</h3>
-            <p>We support local suppliers and serve families, hotels, and offices across Owode Yewa and beyond.</p>
+            <div class="highlight-card__icon" aria-hidden="true">🤝</div>
+            <h3>Hospitality that remembers</h3>
+            <p>Personal shoppers, multilingual attendants, and bespoke gifting services tailored to your household or business.</p>
           </article>
           <article class="highlight-card">
-            <h3>Convenient Service</h3>
-            <p>Enjoy in-store assistance, call-ahead orders, and flexible delivery to your doorstep.</p>
+            <div class="highlight-card__icon" aria-hidden="true">🚚</div>
+            <h3>Convenience without compromise</h3>
+            <p>Schedule dawn deliveries, track chilled logistics, and rely on our concierge for last-minute celebrations.</p>
           </article>
         </div>
       </section>
@@ -197,7 +202,7 @@
         <div class="container">
           <div class="section-heading">
             <h2 class="section-title" id="categories-title">Featured categories</h2>
-            <p>Explore premium provisions tailored to your pantry, lifestyle, and family.</p>
+            <p>Shop by lifestyle, occasion, or cuisine with hand-selected assortments that keep your pantry globally inspired.</p>
           </div>
           <div class="category-grid" data-category-grid></div>
         </div>
@@ -207,31 +212,31 @@
         <div class="container about__grid">
           <div class="about__content" data-animate="fade-up">
             <span class="badge">About OMOOLA SUPERMARKET STORES</span>
-            <h2 class="section-title" id="about-title">Rooted in hospitality. Driven by innovation.</h2>
+            <h2 class="section-title" id="about-title">Rooted in hospitality. Elevated for modern living.</h2>
             <p>
-              OMOOLA SUPERMARKET STORES began as a family-led neighborhood provision store and has grown into a trusted retail
-              destination serving Owode Yewa, Ogun State. We blend warm, human service with tech-enabled inventory, ensuring every
-              aisle is filled with essentials your household depends on.
+              Born in Owode Yewa as a family-run provision shop, OMOOLA SUPERMARKET STORES now delivers a cosmopolitan retail
+              experience for households, restaurants, and corporate clients. We blend smart inventory systems with neighbourly
+              warmth so your everyday essentials are always in-stock, beautifully displayed, and served with genuine care.
             </p>
             <div class="about__stats">
               <div>
                 <strong>14+</strong>
-                <span>Years delivering quality</span>
+                <span>Years delighting shoppers</span>
               </div>
               <div>
                 <strong>250+</strong>
-                <span>Curated grocery brands</span>
+                <span>Curated brands across 18 departments</span>
               </div>
               <div>
                 <strong>3K+</strong>
-                <span>Happy weekly shoppers</span>
+                <span>Happy weekly shoppers & partners</span>
               </div>
             </div>
             <div class="about__values">
               <h3>Mission</h3>
               <p>To simplify everyday shopping with dependable provisions, fair pricing, and heartfelt service.</p>
               <h3>Vision</h3>
-              <p>To be the most trusted supermarket brand in Ogun State, renowned for quality, innovation, and community impact.</p>
+              <p>To be West Africa's most trusted supermarket brand, renowned for quality, innovation, and community impact.</p>
               <h3>Values</h3>
               <ul>
                 <li>Integrity in sourcing and service</li>
@@ -287,7 +292,7 @@
         <div class="container">
           <div class="section-heading">
             <h2 class="section-title" id="products-title">Signature provisions & customer favourites</h2>
-            <p>Browse by category, discover new arrivals, and tap to request a quick quote or delivery.</p>
+            <p>Search by mood or menu, customise your basket, and tap our concierge for swift quotes or cold-chain delivery.</p>
           </div>
           <div class="products__toolbar" role="region" aria-label="Product filters">
             <label for="product-search" class="sr-only">Search products</label>
@@ -300,8 +305,8 @@
           </div>
           <div class="product-grid" data-product-grid></div>
           <div class="products__cta">
-            <p>Need bulk supplies for your restaurant, hotel, or office?</p>
-            <a class="btn btn-primary" href="mailto:hello@omoolastores.ng">Request a wholesale quote</a>
+            <p>Planning an executive retreat or stocking a boutique hotel?</p>
+            <a class="btn btn-primary" href="mailto:hello@omoolastores.ng">Request a bespoke wholesale quote</a>
           </div>
         </div>
       </section>
@@ -310,7 +315,7 @@
         <div class="container">
           <div class="section-heading">
             <h2 class="section-title" id="gallery-title">Inside our flagship store</h2>
-            <p>Take a closer look at our aisles, curated displays, and community-focused events.</p>
+            <p>Tour luminous aisles, artisanal displays, and community events that make OMOOLA a destination, not just a store.</p>
           </div>
           <div class="gallery-grid" data-gallery-grid></div>
         </div>
@@ -320,7 +325,7 @@
         <div class="container">
           <div class="section-heading">
             <h2 class="section-title" id="testimonials-title">Loved by families & businesses alike</h2>
-            <p>Hear from our loyal shoppers across Owode Yewa, Ilaro Road, and beyond.</p>
+            <p>Listen to the stories of chefs, hoteliers, and households who trust our shelves with their most important moments.</p>
           </div>
           <div class="testimonial-slider" role="region" aria-live="polite">
             <button class="slider-control prev" type="button" aria-label="Previous testimonial" data-slider-prev>&larr;</button>
@@ -334,7 +339,7 @@
         <div class="container">
           <div class="section-heading">
             <h2 class="section-title" id="blog-title">Insights, arrivals & supermarket tips</h2>
-            <p>Stay informed with the latest from OMOOLA SUPERMARKET STORES.</p>
+            <p>From new product spotlights to chef collaborations, stay inspired with the latest from our aisles.</p>
           </div>
           <div class="blog-grid" data-blog-grid></div>
         </div>
@@ -344,7 +349,7 @@
         <div class="container newsletter__content">
           <div>
             <h2 class="section-title" id="newsletter-title">Never miss new arrivals & promotions</h2>
-            <p>Subscribe for curated grocery tips, flash sales, and community events. We respect your inbox.</p>
+            <p>Join our inner circle for seasonal menus, private tasting invites, and members-only savings. We respect your inbox.</p>
           </div>
           <form class="newsletter__form" data-newsletter-form novalidate>
             <label for="newsletter-email" class="sr-only">Email address</label>
@@ -361,8 +366,8 @@
             <span class="badge">Visit or reach out</span>
             <h2 class="section-title" id="contact-title">We are here for you every day, 7am – 9pm</h2>
             <p>
-              Stop by our flagship store at ISAGA BUS STOP, opposite The Gem International School, Ilaro Road, Owode Yewa, Ogun
-              State. Call ahead to reserve items, schedule deliveries, or plan corporate provisioning.
+              Visit our flagship destination at ISAGA BUS STOP, opposite The Gem International School, Ilaro Road, Owode Yewa,
+              Ogun State. Reserve limited-edition drops, schedule corporate deliveries, or design a gift hamper with our team.
             </p>
             <ul class="contact__list">
               <li>
@@ -444,8 +449,8 @@
             <span class="brand__secondary">SUPERMARKET STORES</span>
           </a>
           <p>
-            Premium supermarket in Owode Yewa delivering trusted provisions, superior service, and community-driven shopping
-            experiences.
+            A premium supermarket collective delivering trusted provisions, elevated service, and community-driven experiences
+            for Owode Yewa and the global Nigerian diaspora.
           </p>
           <div class="store-hours">
             <strong>Store hours:</strong>
